<third_party/ffmpeg/libavformat> Fix build with VS 2015 Update 3

Prevent usage of undefined symbols in conditional compilation.

Upstream issue:
https://bugs.chromium.org/p/chromium/issues/detail?id=264459

Task-number: QTBUG-54455
Change-Id: I66dbb3afecc00c9e784fcd17a9c2a261d4038ff2
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>